# LatinIME-Android-Studio

./: README.md
LatinIME/native/dicttoolkit/: CMakeLists.txt
LatinIME/native/jni/: CMakeLists.txt
LatinIME/native/jni/src/dictionary/utils/: probability_utils.h
app/: CMakeLists.txt  build.gradle
